--- a/.config/i3/config
+++ b/.config/i3/config
@@ -93,35 +93,35 @@ bindsym $mod+ctrl+l resize grow width 10 px or 10 ppt
 # Program shortcuts
 bindsym $mod+Return exec --no-startup-id $TERMINAL # terminal
 bindsym $mod+d exec --no-startup-id dmenu_run # launcher
-bindsym $mod+b exec $BROWSER # browser
+bindsym $mod+b exec $WEB_BROWSER # browser
 bindsym $mod+f exec --no-startup-id $TERMINAL -e $FILE_MANAGER # file manager
 bindsym $mod+v exec --no-startup-id $TERMINAL -e $EDITOR # text editor
 bindsym ctrl+Mod1+Delete exec --no-startup-id $TERMINAL -e $SYS_MONITOR # task manager
-bindsym $mod+e exec i3lock -i /usr/share/backgrounds/hardy_wallpaper_uhd.png # lock the screen
+bindsym $mod+e exec i3lock -i /usr/share/backgrounds/illyria-default-lockscreen.jpg # lock the screen
 
 # Take a screenshot
 bindsym Print exec --no-startup-id scrot -e 'mv $f ~/Pictures/screenshots/$f'
 
 # Autostart
-exec --no-startup-id nitrogen --restore
-exec --no-startup-id compton -f # compositor
+exec --no-startup-id nitrogen --restore # set wallpaper
+exec --no-startup-id picom -f # compositor
 exec --no-startup-id xrdb ~/.Xdefaults # st config
 exec_always --no-startup-id nm-applet # internet applet
-exec_always --no-startup-id blueman-tray # bluetooth applet
-exec_always --no-startup-id pnmixer # sound applet
+exec --no-startup-id pa-applet # volume applet
+exec_always --no-startup-id blueman-applet # bluetooth applet
 
 # i3bar
 bar {
         i3bar_command i3bar --transparency
         status_command i3status -c $HOME/.config/i3status/config
-        position bottom
+        position top
         workspace_min_width 20
 
         colors {
             background #000000d0
             statusline #ffffffff
             separator #66666666
-            focused_workspace #000000dd #cc4608 #ffffff
+            focused_workspace #000000dd #13ad41 #ffffff
             active_workspace #000000dd #5f676ad8 #ffffff
             inactive_workspace #000000dd #222222 #888888
             urgent_workspace #000000dd #dbd11a #ffffff
