--- a/.config/i3/config
+++ b/.config/i3/config
@@ -97,7 +97,7 @@ bindsym $mod+b exec $WEB_BROWSER # browser
 bindsym $mod+f exec --no-startup-id $TERMINAL -e $FILE_MANAGER # file manager
 bindsym $mod+v exec --no-startup-id $TERMINAL -e $EDITOR # text editor
 bindsym ctrl+Mod1+Delete exec --no-startup-id $TERMINAL -e $SYS_MONITOR # task manager
-bindsym $mod+e exec i3lock -i /usr/share/backgrounds/illyria-default-lockscreen.jpg # lock the screen
+bindsym $mod+e exec --no-startup-id i3lock -i /usr/share/backgrounds/manjaro-gnome/illyria1.png # lock the screen
 
 # Take a screenshot
 bindsym Print exec --no-startup-id scrot -e 'mv $f ~/Pictures/screenshots/$f'
@@ -106,6 +106,7 @@ bindsym Print exec --no-startup-id scrot -e 'mv $f ~/Pictures/screenshots/$f'
 exec --no-startup-id nitrogen --restore # set wallpaper
 exec --no-startup-id picom -f # compositor
 exec --no-startup-id xrdb ~/.Xdefaults # st config
+exec_always --no-startup-id caffeine # keep display on
 exec_always --no-startup-id nm-applet # internet applet
 exec --no-startup-id pa-applet # volume applet
 exec_always --no-startup-id blueman-applet # bluetooth applet
