--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,7 +4,7 @@
 set $mod Mod4
 
 # Font
-font pango:JetBrains Mono 10
+font pango:Hack 10
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -91,30 +91,26 @@ bindsym $mod+ctrl+k resize shrink height 10 px or 10 ppt
 bindsym $mod+ctrl+l resize grow width 10 px or 10 ppt
 
 # Program shortcuts
-bindsym $mod+Return exec --no-startup-id $TERMINAL # terminal
-bindsym $mod+d exec --no-startup-id dmenu_run -fn 'JetBrains Mono:pixelsize=16' # launcher
-bindsym $mod+b exec $GUI_WEB_BROWSER # browser
-bindsym $mod+f exec --no-startup-id $GUI_FILE_MANAGER # file manager
-bindsym $mod+v exec --no-startup-id $TERMINAL -e $EDITOR # text editor
-bindsym ctrl+Mod1+Delete exec --no-startup-id $TERMINAL -e htop # task manager
+bindsym $mod+Return exec --no-startup-id st # terminal
+bindsym $mod+d exec --no-startup-id dmenu_run -fn 'Hack:pixelsize=16' # launcher
+bindsym $mod+b exec firefox # browser
+bindsym $mod+f exec --no-startup-id pcmanfm # file manager
+bindsym $mod+v exec --no-startup-id st -e nvim # text editor
+bindsym ctrl+Mod1+Delete exec --no-startup-id st -e htop # task manager
 
 # Take a screenshot
 bindsym Print exec --no-startup-id scrot -e 'mv $f ~/Pictures/$f'
 
 # Autostart
 exec --no-startup-id nitrogen --restore # set wallpaper
-exec --no-startup-id picom # compositor
+exec --no-startup-id compton # compositor
 exec --no-startup-id xrdb ~/.Xdefaults # st config
-exec_always --no-startup-id nm-applet # internet applet
-exec --no-startup-id pa-applet # volume applet
-exec_always --no-startup-id blueman-applet # bluetooth applet
 
 # i3bar
 bar {
-        i3bar_command i3bar --transparency
+        i3bar_command i3bar
         status_command i3status -c $HOME/.config/i3status/config
         position top
-        workspace_min_width 20
 
         colors {
             background #000000d0
@@ -126,135 +122,8 @@ bar {
             urgent_workspace #000000dd #dbd11a #ffffff
             binding_mode #000000dd #c4f785 #222222
         }
-            
 }
 
 # Remove title bars for tiled windows
 new_window 1pixel
 new_float normal
-
-# Initial Gaps
-gaps outer 5
-gaps inner 10
-
-# Gap Control
-set $mode_gaps Gaps: (o)uter, (i)nner, (h)orizontal, (v)ertical, (t)op, (r)ight, (b)ottom, (l)eft
-set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_horiz Horizontal Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_verti Vertical Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_top Top Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_right Right Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_bottom Bottom Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_left Left Gaps: +|-|0 (local), Shift + +|-|0 (global)
-bindsym $mod+Shift+g mode "$mode_gaps"
-
-mode "$mode_gaps" { 
-        bindsym o      mode "$mode_gaps_outer"
-        bindsym i      mode "$mode_gaps_inner"
-        bindsym h      mode "$mode_gaps_horiz"
-        bindsym v      mode "$mode_gaps_verti"
-        bindsym t      mode "$mode_gaps_top"
-        bindsym r      mode "$mode_gaps_right"
-        bindsym b      mode "$mode_gaps_bottom"
-        bindsym l      mode "$mode_gaps_left"
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-
-mode "$mode_gaps_outer" {
-        bindsym plus  gaps outer current plus 5
-        bindsym minus gaps outer current minus 5
-        bindsym 0     gaps outer current set 0
-
-        bindsym Shift+plus  gaps outer all plus 5
-        bindsym Shift+minus gaps outer all minus 5
-        bindsym Shift+0     gaps outer all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_inner" {
-        bindsym plus  gaps inner current plus 5
-        bindsym minus gaps inner current minus 5
-        bindsym 0     gaps inner current set 0
-
-        bindsym Shift+plus  gaps inner all plus 5
-        bindsym Shift+minus gaps inner all minus 5
-        bindsym Shift+0     gaps inner all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_horiz" {
-        bindsym plus  gaps horizontal current plus 5
-        bindsym minus gaps horizontal current minus 5
-        bindsym 0     gaps horizontal current set 0
-
-        bindsym Shift+plus  gaps horizontal all plus 5
-        bindsym Shift+minus gaps horizontal all minus 5
-        bindsym Shift+0     gaps horizontal all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_verti" {
-        bindsym plus  gaps vertical current plus 5
-        bindsym minus gaps vertical current minus 5
-        bindsym 0     gaps vertical current set 0
-
-        bindsym Shift+plus  gaps vertical all plus 5
-        bindsym Shift+minus gaps vertical all minus 5
-        bindsym Shift+0     gaps vertical all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_top" {
-        bindsym plus  gaps top current plus 5
-        bindsym minus gaps top current minus 5
-        bindsym 0     gaps top current set 0
-
-        bindsym Shift+plus  gaps top all plus 5
-        bindsym Shift+minus gaps top all minus 5
-        bindsym Shift+0     gaps top all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_right" {
-        bindsym plus  gaps right current plus 5
-        bindsym minus gaps right current minus 5
-        bindsym 0     gaps right current set 0
-
-        bindsym Shift+plus  gaps right all plus 5
-        bindsym Shift+minus gaps right all minus 5
-        bindsym Shift+0     gaps right all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_bottom" {
-        bindsym plus  gaps bottom current plus 5
-        bindsym minus gaps bottom current minus 5
-        bindsym 0     gaps bottom current set 0
-
-        bindsym Shift+plus  gaps bottom all plus 5
-        bindsym Shift+minus gaps bottom all minus 5
-        bindsym Shift+0     gaps bottom all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
-mode "$mode_gaps_left" {
-        bindsym plus  gaps left current plus 5
-        bindsym minus gaps left current minus 5
-        bindsym 0     gaps left current set 0
-
-        bindsym Shift+plus  gaps left all plus 5
-        bindsym Shift+minus gaps left all minus 5
-        bindsym Shift+0     gaps left all set 0
-
-        bindsym Return mode "$mode_gaps"
-        bindsym Escape mode "default"
-}
