--- a/i3/config
+++ b/i3/config
@@ -6,13 +6,13 @@
 set $mod Mod4
 
 # default programs
-set $web_browser chromium
-set $file_manager caja
-set $text_editor pluma
-set $system_monitor mate-system-monitor
+set $web_browser firefox
+set $file_manager pcmanfm
+set $text_editor "st -e 'nvim'"
+set $system_monitor "st -e 'htop'"
 
 # font
-font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 12
 
 # autostart file
 exec --no-startup-id ~/.config/i3/autostart.sh
@@ -24,20 +24,21 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
-bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10 
-bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
+# caps lock and num lock indicators
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
+bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id mate-terminal
+bindsym $mod+Return exec --no-startup-id st
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run -sb red
+bindsym $mod+d exec --no-startup-id dmenu_run -fn "DejaVu Sans Mono:pixelsize=18"
 
 # quick launch mode
 set $quick_launch Quick launch: web [b]rowser, [f]ile manager, text [e]ditor, [s]ystem monitor
@@ -53,7 +54,7 @@ mode "$quick_launch" {
 bindsym $mod+a mode "$quick_launch"
 
 # screenshot
-bindsym Print exec --no-startup-id mate-screenshot
+bindsym Print exec --no-startup-id "scrot '%Y-%m-%d_$wx$h_scrot.png' -e 'mv $f ~/Pictures/screenshots/'"
 
 # change focus
 bindsym $mod+h focus left
@@ -87,14 +88,14 @@ bindsym $mod+Shift+space floating toggle
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
 
-# set workspace numbers & names
-set $ws1 1 HOME
-set $ws2 2 WWW
-set $ws3 3 CODE
-set $ws4 4 GFX
-set $ws5 5 VIRT
-set $ws6 6 DOC
-set $ws7 7 ^_^
+# set workspace numbers
+set $ws1 1
+set $ws2 2
+set $ws3 3
+set $ws4 4
+set $ws5 5
+set $ws6 6
+set $ws7 7
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -113,18 +114,6 @@ bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
-
-# open porgrams in specific workspaces
-assign [class="Firefox"] $ws2
-assign [class="Chromium"] $ws2
-assign [class="Virt-manager"] $ws5
-assign [class="libreoffice"] $ws6
-assign [class="vlc"] $ws7
-assign [class="Blender"] $ws4
-assign [class="Gimp"] $ws4
-assign [class="Eclipse"] $ws3
-assign [class="Codeblocks"] $ws3
-assign [class="Code"] $ws3
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -150,6 +139,10 @@ bindsym $mod+r mode "resize"
 # borders
 hide_edge_borders smart
 new_window 1pixel
+
+# gaps
+gaps inner 2
+gaps inner 5
 
 # status bar
 bar {
