--- a/i3blocks/config
+++ b/i3blocks/config
@@ -122,7 +122,7 @@ interval=5
 #
 [time]
 label= 
-command=date '+%Y-%m-%d %H:%M:%S'
+command=date '+%Y-%m-%d %H:%M'
 interval=5
 
 # Generic media player support
