--- a/gxkb/gxkb.cfg
+++ b/gxkb/gxkb.cfg
@@ -5,5 +5,5 @@ never_modify_config=false
 model=pc105
 layouts=us,ro
 variants=,std
-toggle_option=grp:alt_shift_toggle
+toggle_option=grp:rctrl_rshift_toggle
 compose_key_position=
