--- a/codeblocks/default.conf
+++ b/codeblocks/default.conf
@@ -371,7 +371,7 @@
 				</DEFAULT>
 				<LEFT_BLOCK_SELECTION int="0" />
 				<BOTTOM_BLOCK_SELECTION int="10" />
-				<DISPLAY int="0" />
+				<DISPLAY int="1" />
 				<MAXIMIZED bool="1" />
 				<view1>
 					<NAME>
@@ -451,6 +451,20 @@
 				<![CDATA[]]>
 			</str>
 		</NETWORK_PROXY>
+		<file_dialogs>
+			<save_file_as>
+				<FILTER>
+					<str>
+						<![CDATA[All files (*)]]>
+					</str>
+				</FILTER>
+				<DIRECTORY>
+					<str>
+						<![CDATA[/home/alexian/Projects/CodeBlocks/p1]]>
+					</str>
+				</DIRECTORY>
+			</save_file_as>
+		</file_dialogs>
 	</app>
 	<security>
 		<TRUSTED_SCRIPTS>
@@ -4307,7 +4321,7 @@
 			<ALPHA_PERMANENTLY int="100" />
 			<BORDER_ALPHA_PERMANENTLY int="255" />
 		</highlight_occurrence>
-		<ZOOM int="8" />
+		<ZOOM int="0" />
 		<default_code>
 			<SET10>
 				<str>
@@ -4373,12 +4387,12 @@
 				</LANGUAGE>
 				<NAME>
 					<str>
-						<![CDATA[sub]]>
+						<![CDATA[fun]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
-						<![CDATA[subroutine |()\n    \nend subroutine\n]]>
+						<![CDATA[function |()\n    \nend function\n]]>
 					</str>
 				</CODE>
 			</entry1>
@@ -4390,12 +4404,12 @@
 				</LANGUAGE>
 				<NAME>
 					<str>
-						<![CDATA[fun]]>
+						<![CDATA[sub]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
-						<![CDATA[function |()\n    \nend function\n]]>
+						<![CDATA[subroutine |()\n    \nend subroutine\n]]>
 					</str>
 				</CODE>
 			</entry2>
@@ -4600,24 +4614,24 @@
 			<entry17>
 				<NAME>
 					<str>
-						<![CDATA[tday]]>
-					</str>
-				</NAME>
-				<CODE>
-					<str>
-						<![CDATA[$TDAY]]>
-					</str>
-				</CODE>
-			</entry17>
-			<entry18>
-				<NAME>
-					<str>
 						<![CDATA[guard]]>
 					</str>
 				</NAME>
 				<CODE>
 					<str>
 						<![CDATA[#ifndef $(Guard token)\n#define $(Guard token)\n\n|\n\n#endif // $(Guard token)\n]]>
+					</str>
+				</CODE>
+			</entry17>
+			<entry18>
+				<NAME>
+					<str>
+						<![CDATA[tday]]>
+					</str>
+				</NAME>
+				<CODE>
+					<str>
+						<![CDATA[$TDAY]]>
 					</str>
 				</CODE>
 			</entry18>
