--- a/qt5ct/qt5ct.conf
+++ b/qt5ct/qt5ct.conf
@@ -25,4 +25,4 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\a\0\0\0\x1f\0\0\x5N\0\0\x2\xf8\0\0\0\a\0\0\0\x1f\0\0\x5N\0\0\x2\xf8\0\0\0\0\0\0\0\0\x5V\0\0\0\a\0\0\0\x1f\0\0\x5N\0\0\x2\xf8)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\xf8\0\0\0!\0\0\x5J\0\0\x2\xf4\0\0\x2\xf9\0\0\0\"\0\0\x5I\0\0\x2\xf3\0\0\0\0\0\0\0\0\x5V\0\0\x2\xf9\0\0\0\"\0\0\x5I\0\0\x2\xf3)
