--- a/i3/config
+++ b/i3/config
@@ -2,46 +2,6 @@
 #|                           i3 config file                                |
 # \ --------------------------------------------------------------------- /
 
-# [ ------------ Appearance ------------ ]
-
-font pango:DejaVu Sans Mono 12
-
-title_align center
-hide_edge_borders smart
-default_border pixel 2
-default_floating_border normal 2
-
-gaps inner 5
-gaps outer 3
-
-client.focused #6c71c4 #6c71c4 #fdf6e3 #6c31a4
-client.focused_inactive #073642 #073642 #eee8d5 #6c71c4
-client.unfocused #073642 #073642 #93a1a1 #586e75
-client.urgent #d33682 #d33682 #fdf6e3 #dc322f
-
-bar {
-        status_command i3blocks
-        position top
-        separator_symbol "/"
-
-        colors {
-			separator #268bd2
-			background #002b36
-			statusline #839496
-			focused_workspace #fdf6e3 #6c71c4 #fdf6e3
-			active_workspace #fdf6e3 #6c71c4 #fdf6e3
-			inactive_workspace #002b36 #586e75 #002b36
-			urgent_workspace #d33682 #d33682 #fdf6e3
-	  }
-}
-
-for_window [class="Galculator"] floating enable
-for_window [class="XTerm"] border normal 2
-for_window [class="XTerm"] floating enable
-for_window [title="video0 - mpv"] floating enable
-for_window [class="Steam"] floating enable
-for_window [class="screengrab"] floating enable
-
 
 # [ ------------- Autostart ------------ ]
 
@@ -49,7 +9,7 @@ exec --no-startup-id "xrdb -merge '~/.Xresources'"
 exec --no-startup-id nm-applet
 exec --no-startup-id "picom -cf --inactive-opacity=1.0 --menu-opacity=1.0"
 exec --no-startup-id blueman-tray
-exec --no-startup-id "nitrogen --restore"
+exec_always --no-startup-id "nitrogen --restore"
 exec --no-startup-id pa-applet
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id "udiskie -t"
@@ -166,3 +126,46 @@ bindsym $mod+Shift+4 move container to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
+
+
+# [ ------------ Appearance ------------ ]
+
+font pango:DejaVu Sans Mono 12
+
+title_align center
+hide_edge_borders smart
+default_border pixel 2
+default_floating_border normal 2
+
+gaps inner 5
+gaps outer 3
+
+client.focused #6c71c4 #6c71c4 #fdf6e3 #6c31a4
+client.focused_inactive #073642 #073642 #eee8d5 #6c71c4
+client.unfocused #073642 #073642 #93a1a1 #586e75
+client.urgent #d33682 #d33682 #fdf6e3 #dc322f
+
+bar {
+        status_command i3blocks
+        position top
+        separator_symbol "/"
+
+        colors {
+			separator #268bd2
+			background #002b36
+			statusline #839496
+			focused_workspace #fdf6e3 #6c71c4 #fdf6e3
+			active_workspace #fdf6e3 #6c71c4 #fdf6e3
+			inactive_workspace #002b36 #586e75 #002b36
+			urgent_workspace #d33682 #d33682 #fdf6e3
+	  }
+}
+
+for_window [class="Galculator"] floating enable
+for_window [class="XTerm"] border normal 2
+for_window [class="XTerm"] floating enable
+for_window [title="video0 - mpv"] floating enable
+for_window [class="Steam"] floating enable
+for_window [class="screengrab"] floating enable
+
+
