--- a/qt5ct/qt5ct.conf
+++ b/qt5ct/qt5ct.conf
@@ -3,7 +3,7 @@ color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
 icon_theme=breeze-dark
 standard_dialogs=default
-style=Fusion
+style=Breeze
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0\x14\0S\0\x61\0n\0s\0 \0S\0\x65\0r\0i\0\x66@\"\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
@@ -25,4 +25,4 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\xf8\0\0\0!\0\0\x5J\0\0\x2\xf4\0\0\x2\xf9\0\0\0\"\0\0\x5I\0\0\x2\xf3\0\0\0\0\0\0\0\0\x5V\0\0\x2\xf9\0\0\0\"\0\0\x5I\0\0\x2\xf3)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\xad\0\0\0 \0\0\x5N\0\0\x2\xf8\0\0\x2\xaf\0\0\0\"\0\0\x5L\0\0\x2\xf6\0\0\0\0\0\0\0\0\x5V\0\0\x2\xaf\0\0\0\"\0\0\x5L\0\0\x2\xf6)
