--- a/i3blocks/config
+++ b/i3blocks/config
@@ -6,6 +6,10 @@ command=/usr/lib/i3blocks/$BLOCK_NAME/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+[window]
+command=xtitle -s
+interval=persist
+
 [memory]
 label=⛃ 
 interval=5
